# agent-ebpf-filter

./: .air.toml  .bpf_checksum  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  agents.md  go.work  go.work.sum  main.go.bak  nx.json  package.json  project.json  test_drop.go  test_su.go
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
adapters/python/: README.md  agent_tracker.py  pyproject.toml  tracker_pb2.py
backend/: README.md  api_state.go  api_ws.go  bandwidth_tracker.go  behavior_classifier.go  behavior_embedding.go  benchmark_handlers.go  benchmark_suite.go  camera_manager.go  cgroup_attribution.go  cgroup_sandbox_control.go  cluster.go  collector_metrics.go  config_handlers.go  config_ml_handlers.go  decision_forest.go  ebpf_runtime.go  ebpf_runtime_test.go  event_context.go  event_context_test.go  event_envelope.go  event_envelope_test.go  event_recording.go  event_recording_test.go  execution_graph.go  execution_graph_test.go  features.go  geoip.go  geoip_mmdb.go  go.mod  go.sum  helpers.go  hooks.go  launch_env.go  lsm_enforcer_control.go  main.go  mcp_server.go  metrics.go  ml_auto_tune.go  ml_auto_tune_helpers.go  (+76 more)
docs/: architecture.md  benchmark.md  codex-workflows.md  ml-benchmark-presentation.html  ml-benchmark-report.md  ml-opening-report.md  otel-export.md  policy-semantics.md  security-model.md  threat-model.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
layouts/: dev.kdl
proposal-output/: 01_重点课题版.md  02_短版.md  03_封面目录导师意见模板.md  04_深度调研报告.md  05_公开展演提纲.md  README.md  (+1 more)
(+231 files in other folders)
